--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 
 <h1 id="foods"> National Fruits and Vegtables Market Prices</h1>
-<p> We will compare different retail prices with fruits and vegetables! </p>
+<p> We will compare different retail prices with fruits and vegetables!
+    </p>
     
     <ul>
     <h2> DASHBOARD:</h2>
@@ -19,6 +20,7 @@
     <li> <a href="https://docs.google.com/document/d/192WgOxMg7vAKatvbeptxPTF0ou3f6RplpZKVYaoufes/edit?usp=sharing"> Google Doc with Sources</a>
         </li>
     </ul>
+    <p>HYPOTHESIS: When researching and reading my data sets I have found so many patterns. In my first graph shown, I was able to see the difference in price costs within the different type of varieties. This was neat to see, especially when most people do not notice the price change between apples. For the first graph it was also note worthy to see where all of these different types of apples are grown. When researching I was able to learn that apples produced in different locations can produce different costs. Along with the first graph, my second graph compares a variety of foods that are organic and not organic. It was interestering to research that when a crop is organic their selling price is much higher than an average crop. Then lastly, my third graph constists of a small list of vegetables. I have compared their market price from 2016 to now. We can noice that the price in 2016 is higher and then in 2020 it is lower. When researching farther to find out why, I read that this is because of the current pandemic. Crop production has been steady but the number of people buying the products is low. This graph proves that this is accurate because the price in 2016 falls under the price in 2020.  </p>
     
 </body>
 </html>
